--- a/build.gradle
+++ b/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     runtimeOnly('com.h2database:h2')
 
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+    implementation("org.springframework.boot:spring-boot-starter-security")
 }
