--- a/build.gradle
+++ b/build.gradle
@@ -32,4 +32,7 @@ dependencies {
     runtimeOnly('com.h2database:h2')
 
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+    implementation("org.springframework.boot:spring-boot-starter-security")
+    implementation('org.springframework.boot:spring-boot-starter-data-rest')
+    //implementation('org.projectlombok:lombok:1.18.4')
 }
