--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-spring.application.name = Lesson 12 - Spring Data
+spring.application.name = Lesson 14 - Spring REST Services
 
 server.error.path=/error
 server.error.whitelabel.enabled=false
