--- a/build.gradle
+++ b/build.gradle
@@ -34,5 +34,5 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     implementation("org.springframework.boot:spring-boot-starter-security")
     implementation('org.springframework.boot:spring-boot-starter-data-rest')
-    //implementation('org.projectlombok:lombok:1.18.4')
+    implementation('org.projectlombok:lombok:1.18.4')
 }
