--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ apply plugin: 'io.spring.dependency-management'
 group = 'edu.dcccd'
 version = '0.0.1'
 sourceCompatibility = 10
+jar {
+    baseName = 'trans'
+}
+
 
 repositories {
     mavenCentral()
@@ -35,4 +39,5 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-security")
     implementation('org.springframework.boot:spring-boot-starter-data-rest')
     implementation('org.projectlombok:lombok:1.18.4')
+    'com.heroku.sdk:heroku-deploy:2.0.6'
 }
